--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "title": "macOS Xcode Dusk Theme",
     "description": "The saga of macOS Xcode themes continue! After macOS Xcode default theme take a look to new Dusk theme for Brackets!",
     "homepage": "https://github.com/diogofilipee/brackets-macOS-Xcode-Dusk",
-    "version": "1.0.8",
+    "version": "1.0.9",
     "author": "Diogo Filipe <diogo.filipee@hotmail.com> (https://github.com/diogofilipee)",
     "license": "MIT",
     "i18n": ["en", "pt"],
     "package-i18n": {
         "pt": {
-            "description": "A saga dos temas do macOS Xcode continuam! Experimente o novo tema Dusk para o Brackets!"
+            "description": "A saga dos temas do macOS Xcode continuam! Experimente o novo tema Dusk, uma variação do tema padrão do editor de texto macOS Xcode, adaptado para o Brackets!"
         }
     },
     "repository": {
